[tool.poetry]
name = "textcheck"
version = "0.2.2"
description = "Check text files for issues."
authors = ["Petr Stribny <petr@stribny.name>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stribny/textcheck"
repository = "https://github.com/stribny/textcheck"
keywords = ["text", "spellcheck"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Topic :: Text Processing",
]

[tool.poetry.scripts]
textcheck = "textcheck.main:app"

[tool.poetry.dependencies]
python = "^3.9"
rich = "*"
stackprinter = "*"
typer = "*"
spacy = "2.3.7"
spacy_hunspell = "^0.1.0"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "==20.8b1"
flake8 = "==3.8.4"
mypy = "*"
pre-commit = "*"
pysnooper = "*"
pytest = "*"
pytest-sugar = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
